[tool.poetry]
name = "taiga2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "1.4.2"
botocore = "1.4.93"
celery = "4.1.1"
certifi = "2019.6.16"
click = "7.0"
clickclick = "1.2.2"
connexion = {extras = ["swagger-ui"], version = "2.3.0"}
docutils = "0.14"
flask = "1.1.4"
flask-marshmallow = "0.7.0"
flask-migrate = "2.0.3"
flask-sqlalchemy = "2.1"
google-cloud-error-reporting = "1.1.0"
google-cloud-storage = "1.35.0"
h5py = "3.15.1"
humanize = "0.5.1"
jsonpointer = "2.0"
jsonschema = "2.6.0"
kombu = "4.2.1"
mailjet-rest = "1.3.3"
markupsafe = "1.1.1"
marshmallow = "2.15.1"
marshmallow-enum = "1.0"
marshmallow-oneofschema = "1.0.3"
marshmallow-sqlalchemy = "0.12.1"
numpy = "1.26.4"
psutil = "5.6.7"
pyyaml = ">=6.0.3"
redis = "2.10.5"
requests = "2.22.0"
sqlalchemy = "1.3.0"
swagger-spec-validator = "2.4.3"
typing-extensions = "3.7.4.3"
urllib3 = "1.25.11"
werkzeug = "0.15.4"

[tool.poetry.group.dev.dependencies]
alembic = "1.0.11"
factory-boy = "2.9.2"
flask-script = "2.0.5"
flask-shell-ipython = "0.4.1"
pre-commit = "1.17.0"
pytest = "3.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
